<resources>
    <string name="app_name">视界mvp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_user_name">请登陆</string>
    <string name="navigation_user_favorite">收藏</string>
    <string name="navigation_offline_download">离线下载</string>
    <string name="navigation_first_item">首页</string>
    <string name="app_exit_toast">再按一次退出程序</string>

    <string name="loading_desc">加载中...</string>
    <string name="no_more_data">- 没有更多数据 -</string>
    <string name="load_abnormal">- 加载异常，点击重试 -</string>
    
    <string name="avatar_title_editor">主编</string>

    <string name="action_settings">Settings</string>
    <string name="story_menu_share">分享</string>
    <string name="story_menu_store">收藏</string>
    <string name="story_menu_comment">评论</string>
    <string name="story_menu_like">点赞</string>
    <string name="story_detail_comment_toolbar_title">%1$s条点评</string>
    <string name="story_detail_comment_no">深度长评虚位以待</string>
    <string name="story_detail_comment_title">%1$d条%2$s评</string>
    <string name="story_detail_comment_long">长</string>
    <string name="story_detail_comment_short">短</string>
    <string name="story_detail_comment_item_extend">展开</string>
    <string name="story_detail_comment_item_reduce">收起</string>
</resources>
