<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context = ".ui.activity.StoryDetailActivity">
    <item
        android:id="@+id/story_share"
        android:icon="@mipmap/ic_menu_share"
        android:title="@string/story_menu_share"
        app:showAsAction = "always|withText" />
    <item
        android:id="@+id/story_store"
        android:icon="@mipmap/ic_menu_store"
        android:title="@string/story_menu_store"
        app:showAsAction = "always|withText"/>
    <item
        android:id="@+id/story_comment"
        android:title="@string/story_menu_comment"
        app:showAsAction = "always|withText"
        app:actionLayout="@layout/menu_action_comment"/>

    <item
        android:id="@+id/story_like"
        android:title="@string/story_menu_like"
        app:showAsAction = "always|withText"
        app:actionLayout="@layout/menu_action_like"/>

</menu>